--- a/1) lista dwukierunkowa/Makefile
+++ b/1) lista dwukierunkowa/Makefile
@@ -1,3 +1,6 @@
-default:
-	@clang main.c list.c -Ilist.h -std=c99 -o main.exe
-	@main.exe
+NAME = lista_dwukierunkowa
+
+default: compile
+	@$(NAME).exe
+compile:
+	@clang main.c list.c -Ilist.h -std=c99 -o $(NAME).exe
